# updatemanager

./: CMakeLists.txt  Readme.txt  common.cpp  getversionex.cpp  httpdownloader.cpp  httprequest.cpp  httpresponse.cpp  httpsession.cpp  iniline.cpp  iniparser.cpp  logic.cpp  srvsettings.cpp  stdafx.cpp  stdafx.h  update.cpp  updatepathes.cpp  updatethread.cpp  version.cpp
include/: common.h  constants.h  getversionex.h  httpdefs.h  httpdownloader.h  httprequest.h  httpresponse.h  httpsession.h  iniline.h  iniparser.h  logic.h  srvsettings.h  update.h  updatepathes.h  updatethread.h  version.h
